# ai-invention-7ee30c-catching-silent-feature-absorption-in-fr

./: README.md
prompts/: README.md
round-1/dataset-1/src/: .terminal_claude_agent_struct_out.json  DATASET_README.md  data.py  make_variants.py  mini_data_out.json  preview_data_out.json  pyproject.toml
round-1/dataset-2/src/: .terminal_claude_agent_struct_out.json  build_dataset.py  manifest.json  mini_data_out.json  pipeline.py  preview_data_out.json  pyproject.toml  schema.json
round-1/dataset-3/src/: .aii_cost_ledger.jsonl  .terminal_claude_agent_struct_out.json  README.md  data.py  data_summary.json  mini_data_out.json  pyproject.toml
round-1/dataset-4/src/: .aii_cost_ledger.jsonl  .terminal_claude_agent_struct_out.json  README.md  build_dataset.py  data.py  data_summary.json  explore.py  manifest.json  mini_data_out.json  preview_data_out.json  pyproject.toml  qc.py  schema.json  verify.py
round-10/evaluation-1/src/: .terminal_claude_agent_struct_out.json  README.md  eval.py  eval_out.json  full_eval_out.json  make_variants.py  mini_eval_out.json  preview_eval_out.json  pyproject.toml
round-10/experiment-2/src/: .terminal_claude_agent_struct_out.json  README.md  catalog.csv  catalog.json  core.py  download_assets.py  enrich_post.py  full_method_out.json  make_variants.py  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-10/experiment-3/src/: .terminal_claude_agent_struct_out.json  README.md  core.py  download_models.py  full_method_out.json  label_scarce.py  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml  transfer.py
round-2/experiment-1/src/: .terminal_claude_agent_struct_out.json  README.md  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-2/experiment-2/src/: .terminal_claude_agent_struct_out.json  README.md  enrich_neuronpedia.py  full_method_out.json  method.py  method_out.json  mini_method_out.json  neuronpedia_cache.json  preview_method_out.json  probe.py  pyproject.toml
round-2/experiment-3/src/: .terminal_claude_agent_struct_out.json  finalize.sh  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
round-3/experiment-1/src/: .terminal_claude_agent_struct_out.json  README.md  full_L_out.json  full_method_out.json  method.py  method_out.json  mini_L_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml  smoke_out.json
round-3/experiment-2/src/: .terminal_claude_agent_struct_out.json  RESULTS_SUMMARY.md  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
round-3/experiment-3/src/: .terminal_claude_agent_struct_out.json  README.md  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-3/experiment-4/src/: .terminal_claude_agent_struct_out.json  download.py  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-3/experiment-5/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml  smoke_out.json  test100_out.json
round-4/experiment-2/src/: .terminal_claude_agent_struct_out.json  README.md  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-4/experiment-3/src/: .terminal_claude_agent_struct_out.json  RESULTS_SUMMARY.md  mini_method_out.json  preview_method_out.json  pyproject.toml
round-4/experiment-5/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml  run_full.sh
round-5/dataset-1/src/: .terminal_claude_agent_struct_out.json  pyproject.toml
round-5/experiment-2/src/: .terminal_claude_agent_struct_out.json  README.md  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml  repatch_verdicts.py
round-5/experiment-3/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml  run_and_finalize.sh  self_check.py  test_builders.py
round-5/experiment-4/src/: .terminal_claude_agent_struct_out.json  RESULTS_SUMMARY.md  engine.py  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  profession_absorption.py  pyproject.toml
round-6/dataset-1/src/: .aii_cost_ledger.jsonl  .terminal_claude_agent_struct_out.json  DATA_SOURCES.md  build_dataset.py  data.py  manifest.json  mini_data_out.json  pipeline.py  preview_data_out.json  pyproject.toml  schema.json
round-6/experiment-2/src/: .terminal_claude_agent_struct_out.json  README.md  core.py  finalize.py  full_method_out.json  method.py  method_out.json  mini_method_out.json  prefetch.py  preview_method_out.json  pyproject.toml  safety.py
round-6/experiment-3/src/: .terminal_claude_agent_struct_out.json  README.md  full_method_out.json  method.py  method_out.json  method_out_mini.json  method_out_smoke.json  mini_method_out.json  post_process.py  preview_method_out.json  pyproject.toml
round-7/experiment-1/src/: .terminal_claude_agent_struct_out.json  README.md  core.py  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml  repatch_honest.py
round-7/experiment-2/src/: .terminal_claude_agent_struct_out.json  README.md  core.py  full_method_out.json  make_variants.py  method.py  method_iter6.py  mini_method_out.json  patch_honest.py  preview_method_out.json  pyproject.toml  screen.py
round-8/experiment-2/src/: .terminal_claude_agent_struct_out.json  README.md  build_variants_when_ready.sh  core.py  download_assets.py  finalize.sh  finalize_after_full.sh  method.py  method_lib.py  mini_method_out.json  preview_method_out.json  pyproject.toml  run_full_after_mini.sh
round-9/evaluation-1/src/: .terminal_claude_agent_struct_out.json  README.md  eval.py  eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
(+639 files in other folders)
