[project]
name = "first-letter-spelling-absorption-testbed"
version = "1.0.0"
description = "Builder for the First-Letter-Spelling Absorption Testbed (content/surface-flip minimal pairs + frozen Pile letter-occurrence corpus), anchored in the gemma-2-2b vocabulary."
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.14.1",
    "datasets==5.0.0",
    "huggingface-hub==1.19.0",
    "loguru==0.7.3",
    "numpy==2.4.6",
    "protobuf==7.35.1",
    "sentencepiece==0.2.1",
    "tenacity==9.1.4",
    "tokenizers==0.22.2",
    "transformers==5.12.1",
    "zstandard==0.25.0",
]

[tool.uv]
package = false
