[project]
name = "ccrg-toxicity-dataset-family"
version = "1.0.0"
description = "Two-Track CCRG Toxicity Dataset Family (ParaDetox content-flips + civil_comments frozen sub-context labels + OpenRouter-generated surface-flips)."
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "anyio==4.14.0",
    "attrs==26.1.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "datasets==2.21.0",
    "dill==0.3.8",
    "filelock==3.29.4",
    "frozenlist==1.8.0",
    "fsspec==2024.6.1",
    "h11==0.16.0",
    "hf-xet==1.5.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.19.0",
    "idna==3.18",
    "joblib==1.5.3",
    "markdown-it-py==4.2.0",
    "mdurl==0.1.2",
    "multidict==6.7.1",
    "multiprocess==0.70.16",
    "narwhals==2.22.1",
    "numpy==2.4.6",
    "packaging==26.2",
    "pandas==3.0.3",
    "propcache==0.5.2",
    "pyarrow==24.0.0",
    "pygments==2.20.0",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "requests==2.34.2",
    "rich==15.0.0",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
    "tqdm==4.68.3",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
    "xxhash==3.7.0",
    "yarl==1.24.2",
]

# data.py itself is stdlib-only (runs via `uv run data.py`). These pinned
# dependencies reproduce the .venv used by the staged build/ scripts:
#   build/s2_classification.py  -> datasets (civil_comments streaming)
#   build/s3_surface_flips.py   -> httpx (OpenRouter async calls)
#   build/verify_baseline.py    -> scikit-learn (TF-IDF + logistic-regression baselines)
