[project]
name = "iter10-integrity-lock-eval"
version = "0.1.0"
description = "Iter-10 integrity-lock EVAL: R3 control-reframe + R4 circularity + R6 Amazon + carried spine"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.1.3",
    "scipy==1.14.1",
    "statsmodels==0.14.4",
    "loguru==0.7.2",
]
