[project]
name = "ccrg-iter10-absorber-catalog"
version = "0.1.0"
description = "M1''''' part 2: Label-Free Absorber CATALOG over a public Gemma-Scope-2b SAE suite ({16k,65k} x {L9,L12}). Parametrizes the shipped iter-9 label-free firing-signature screen (screen.py + core.py) over 4 frozen SAE configs; emits one catalog row per (candidate x config) with the full label-free absorption signature, per-config Wilson coverage, cross-config stability, and positive-control reproduction. Single GPU; $0 model-internal."
requires-python = ">=3.12"
# Exact versions are `uv pip freeze` from the .venv that produced method_out.json
# (NVIDIA RTX A4500, sm_86, CUDA 12.x; torch cu128 wheels include sm_86 kernels).
dependencies = [
    "accelerate==1.14.0",
    "annotated-doc==0.0.4",
    "anyio==4.14.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "cuda-bindings==12.9.7",
    "cuda-pathfinder==1.5.5",
    "cuda-toolkit==12.8.1",
    "filelock==3.29.4",
    "fsspec==2026.6.0",
    "h11==0.16.0",
    "hf-xet==1.5.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.19.0",
    "idna==3.18",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "loguru==0.7.3",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "narwhals==2.22.1",
    "networkx==3.6.1",
    "numpy==2.4.6",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.19.0.56",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.28.9",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.4.5",
    "nvidia-nvtx-cu12==12.8.90",
    "packaging==26.2",
    "protobuf==6.33.1",
    "psutil==7.2.2",
    "pygments==2.20.0",
    "pyyaml==6.0.3",
    "regex==2026.5.9",
    "requests==2.32.5",
    "rich==15.0.0",
    "safetensors==0.8.0",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "sentencepiece==0.2.0",
    "setuptools==81.0.0",
    "shellingham==1.5.4",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "torch==2.11.0+cu128",
    "tqdm==4.68.3",
    "transformers==5.12.1",
    "triton==3.6.0",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
