[project]
name = "ccrg-m2pppppp-cross-deployment-transfer"
version = "0.1.0"
description = "M2''''' (iter-10): GENUINE cross-deployment zero-label transfer + break-even K* + selection-independent behavioral-KL localization + Amazon instrument-disagreement diagnosis. Fixes iter-9's circular where-to-gate claim: absorber id FIXED on deployment A; on a DISJOINT deployment B (eval-fold doc-hash halves) + a template->natural carrier-shift C, the n-independent fixed-id SAE firing gate vs a fresh n-label dense gate fit on B's OWN labels. Engine (core.py+method.py+label_scarce.py) copied VERBATIM + additive _ls_stash_v2; new driver transfer.py. Single GPU (RTX 5090 sm_120, torch cu128); $0 model-internal, ~$0.05 OpenRouter judges (hard cap $10)."
requires-python = ">=3.12"
# torch is the cu128 build (RTX 5090 / sm_120 Blackwell). Install with:
#   uv venv .venv --python=3.12
#   uv pip install --python=.venv/bin/python --index-strategy unsafe-best-match \
#     --extra-index-url https://download.pytorch.org/whl/cu128 -r pyproject.toml
# OpenRouter judges require OPENROUTER_API_KEY; HF_TOKEN for gated google/gemma-2-2b (else unsloth mirror).
# SAE loaded directly from gemma-scope params.npz (layer_12/width_16k/average_l0_82).
dependencies = [
    "accelerate==1.14.0",
    "annotated-doc==0.0.4",
    "anyio==4.14.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "filelock==3.29.4",
    "fsspec==2026.6.0",
    "ftfy==6.3.1",
    "h11==0.16.0",
    "hf-xet==1.5.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.19.0",
    "idna==3.18",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "langcodes==3.5.1",
    "locate==1.1.1",
    "loguru==0.7.3",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "msgpack==1.2.1",
    "narwhals==2.22.1",
    "networkx==3.6.1",
    "numpy==2.4.6",
    "nvidia-cublas-cu12==12.8.3.14",
    "nvidia-cuda-cupti-cu12==12.8.57",
    "nvidia-cuda-nvrtc-cu12==12.8.61",
    "nvidia-cuda-runtime-cu12==12.8.57",
    "nvidia-cudnn-cu12==9.7.1.26",
    "nvidia-cufft-cu12==11.3.3.41",
    "nvidia-cufile-cu12==1.13.0.11",
    "nvidia-curand-cu12==10.3.9.55",
    "nvidia-cusolver-cu12==11.7.2.55",
    "nvidia-cusparse-cu12==12.5.7.53",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-nccl-cu12==2.26.2",
    "nvidia-nvjitlink-cu12==12.8.61",
    "nvidia-nvtx-cu12==12.8.55",
    "packaging==26.2",
    "psutil==7.2.2",
    "pygments==2.20.0",
    "pyyaml==6.0.3",
    "regex==2026.5.9",
    "requests==2.32.3",
    "rich==15.0.0",
    "safetensors==0.8.0",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "sentencepiece==0.2.1",
    "setuptools==82.0.1",
    "shellingham==1.5.4",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "torch==2.7.0+cu128",
    "tqdm==4.68.3",
    "transformers==5.12.1",
    "triton==3.3.0",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
    "wcwidth==0.8.1",
    "wordfreq==3.1.1",
]
