[project]
name = "two-track-ccrg-experiment"
version = "1.0.0"
description = "Two-Track CCRG primary endpoint (E1/E2/C1 + admission + steering) on frozen Gemma-Scope L12/16k SAE over the first-letter spelling absorption testbed."
requires-python = ">=3.12"
# torch is a CUDA build (installed 2.6.0+cu126); reinstall e.g.: uv pip install torch==2.6.0 --index-url https://download.pytorch.org/whl/cu124
dependencies = [
    "accelerate==1.14.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "filelock==3.29.4",
    "fsspec==2026.6.0",
    "hf-xet==1.5.1",
    "huggingface-hub==0.36.2",
    "idna==3.18",
    "igraph==1.0.0",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "leidenalg==0.12.0",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "narwhals==2.22.1",
    "networkx==3.6.1",
    "numpy==2.4.6",
    "nvidia-cublas-cu12==12.6.4.1",
    "nvidia-cuda-cupti-cu12==12.6.80",
    "nvidia-cuda-nvrtc-cu12==12.6.77",
    "nvidia-cuda-runtime-cu12==12.6.77",
    "nvidia-cudnn-cu12==9.5.1.17",
    "nvidia-cufft-cu12==11.3.0.4",
    "nvidia-curand-cu12==10.3.7.77",
    "nvidia-cusolver-cu12==11.7.1.2",
    "nvidia-cusparse-cu12==12.5.4.2",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.6.85",
    "nvidia-nvtx-cu12==12.6.77",
    "packaging==26.2",
    "pandas==3.0.3",
    "patsy==1.0.2",
    "psutil==7.2.2",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "regex==2026.5.9",
    "requests==2.34.2",
    "safetensors==0.8.0",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "sentencepiece==0.2.1",
    "setuptools==82.0.1",
    "six==1.17.0",
    "statsmodels==0.14.6",
    "sympy==1.13.1",
    "texttable==1.7.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.20.3",
    "torch==2.6.0+cu126",
    "tqdm==4.68.3",
    "transformers==4.46.3",
    "triton==3.2.0",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
]

[tool.uv]
package = false
