[project]
name = "ccrg-toxicity-exp"
version = "0.1.0"
description = "Two-Track CCRG toxicity firing-structure (MAJOR-2) + C1 + selection ordering on Gemma Scope SAEs"
requires-python = ">=3.12"
dependencies = [
    "torch==2.12.0",
    "numpy==1.26.4",
    "pandas==3.0.3",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "statsmodels==0.14.6",
    "sae-lens==6.44.3",
    "transformers==5.12.1",
    "accelerate==1.14.0",
    "safetensors==0.8.0",
    "huggingface-hub==1.19.0",
    "python-igraph==1.0.0",
    "leidenalg==0.12.0",
    "concept-erasure==0.2.4",
    "networkx==3.6.1",
    "loguru==0.7.3",
    "tqdm==4.68.3",
]
