[project]
name = "two-track-ccrg-experiment-iter3"
version = "1.0.0"
description = "Iter-3 decisive re-run of Two-Track CCRG (first-letter): + RANDOM-ELIGIBLE-k baseline (M1), AUC-difference CIs + pooled meta + Youden accuracy (M2), and verdict reconciliation from the stated falsifier (M3). Frozen Gemma-Scope L12/16k JumpReLU SAE."
requires-python = ">=3.12"
# torch swapped to a Blackwell (sm_120 / RTX 5090) compatible cu128 build; iter-2 used 2.6.0+cu126 which
# lacks sm_120 kernels. All NON-torch deps kept at iter-2 pins to preserve model-forward numerics.
dependencies = [
    "accelerate==1.14.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "filelock==3.29.4",
    "fsspec==2026.6.0",
    "hf-xet==1.5.1",
    "huggingface-hub==0.36.2",
    "idna==3.18",
    "igraph==1.0.0",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "leidenalg==0.12.0",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "narwhals==2.22.1",
    "networkx==3.6.1",
    "numpy==2.4.6",
    "packaging==26.2",
    "pandas==3.0.3",
    "patsy==1.0.2",
    "psutil==7.2.2",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "regex==2026.5.9",
    "requests==2.34.2",
    "safetensors==0.8.0",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "sentencepiece==0.2.1",
    "setuptools==82.0.1",
    "six==1.17.0",
    "statsmodels==0.14.6",
    "sympy==1.13.3",
    "texttable==1.7.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.20.3",
    "torch==2.8.0",
    "tqdm==4.68.3",
    "transformers==4.46.3",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
