[project]
name = "m4-firing-structure-router"
version = "1.0.0"
description = "M4 A-Priori Firing-Structure Router: firing-Jaccard predicts whether CCRG beats attribution. Prospective validation across spelling/numeric/taxonomic/toxicity established concepts + sentiment/aspect prospective concepts on frozen Gemma-Scope L12/16k SAE."
requires-python = ">=3.12"
# torch built against CUDA 12.8 (cu128 wheels) -> supports Ada (sm_89) and Blackwell (sm_120).
# Install torch from the cu128 index:
#   uv pip install torch==2.7.0 --extra-index-url https://download.pytorch.org/whl/cu128
dependencies = [
    "torch==2.7.0",
    "numpy==2.4.6",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "transformers==4.46.3",
    "tokenizers==0.20.3",
    "accelerate==1.14.0",
    "huggingface-hub==0.36.2",
    "safetensors==0.8.0",
    "sentencepiece==0.2.1",
    "psutil==7.2.2",
    "loguru==0.7.3",
]

[tool.uv]
package = false
