[project]
name = "ccrg-model-diffing-m6"
version = "0.1.0"
description = "M6 model-diffing: shared frozen pt-SAE on gemma-2-2b vs gemma-2-2b-it; co-response unit vs best single latent for the RLHF-detox usage shift, with the shared-SAE confound bounded."
requires-python = ">=3.12"
# Reproducibility: torch is installed from the cu126 wheel index (host driver is CUDA 12.7; cu130
# wheels do NOT run here). The SAE is loaded directly from the Gemma-Scope params.npz (JumpReLU
# forward) -- sae_lens/transformer_lens are present in the env but NOT imported by method.py.
# Reproduce:
#   uv venv .venv --python=3.12
#   uv pip install --python=.venv/bin/python "torch==2.7.1" --index-url https://download.pytorch.org/whl/cu126
#   uv pip install --python=.venv/bin/python -e .
# dependencies below = EXACT `uv pip freeze` of the validated .venv (all transitive deps pinned).
dependencies = [
    "accelerate==1.14.0",
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.14.0",
    "attrs==26.1.0",
    "babe==0.0.7",
    "beartype==0.22.9",
    "better-abc==0.0.3",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "config2py==0.1.48",
    "datasets==5.0.0",
    "dill==0.4.1",
    "docstring-parser==0.18.0",
    "dol==0.3.44",
    "einops==0.8.2",
    "fancy-einsum==0.0.3",
    "filelock==3.29.4",
    "frozenlist==1.8.0",
    "fsspec==2026.4.0",
    "gitdb==4.0.12",
    "gitpython==3.1.50",
    "graze==0.1.42",
    "h11==0.16.0",
    "hf-xet==1.5.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.19.0",
    "i2==0.1.64",
    "idna==3.18",
    "importlib-resources==7.1.0",
    "jaxtyping==0.3.11",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "loguru==0.7.3",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "multiprocess==0.70.19",
    "narwhals==2.22.1",
    "networkx==3.6.1",
    "nltk==3.9.4",
    "numpy==1.26.4",
    "nvidia-cublas-cu12==12.6.4.1",
    "nvidia-cuda-cupti-cu12==12.6.80",
    "nvidia-cuda-nvrtc-cu12==12.6.77",
    "nvidia-cuda-runtime-cu12==12.6.77",
    "nvidia-cudnn-cu12==9.5.1.17",
    "nvidia-cufft-cu12==11.3.0.4",
    "nvidia-cufile-cu12==1.11.1.6",
    "nvidia-curand-cu12==10.3.7.77",
    "nvidia-cusolver-cu12==11.7.1.2",
    "nvidia-cusparse-cu12==12.5.4.2",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-nccl-cu12==2.26.2",
    "nvidia-nvjitlink-cu12==12.6.85",
    "nvidia-nvtx-cu12==12.6.77",
    "packaging==26.2",
    "pandas==3.0.3",
    "patsy==1.0.2",
    "pillow==12.2.0",
    "platformdirs==4.10.0",
    "plotly-express==0.4.1",
    "plotly==6.8.0",
    "propcache==0.5.2",
    "protobuf==7.35.1",
    "psutil==6.1.1",
    "py2store==0.1.22",
    "pyarrow==24.0.0",
    "pydantic-core==2.46.4",
    "pydantic==2.13.4",
    "pygments==2.20.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "regex==2026.5.9",
    "requests==2.34.2",
    "rich==15.0.0",
    "sae-lens==6.44.3",
    "safetensors==0.8.0",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "sentencepiece==0.2.1",
    "sentry-sdk==2.63.0",
    "setuptools==82.0.1",
    "shellingham==1.5.4",
    "simple-parsing==0.1.8",
    "six==1.17.0",
    "smmap==5.0.3",
    "statsmodels==0.14.6",
    "sympy==1.14.0",
    "tenacity==9.1.4",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "tqdm==4.68.3",
    "transformer-lens==3.4.0",
    "transformers-stream-generator==0.0.5",
    "transformers==5.12.1",
    "triton==3.3.1",
    "typeguard==4.5.2",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "wadler-lindig==0.1.7",
    "wandb==0.27.2",
    "xxhash==3.7.0",
    "yarl==1.24.2",
]
