[project]
name = "homograph-polysemy-absorption-testbed"
version = "1.0.0"
description = "Text-only SAE feature-absorption testbed across FOUR homograph/polysemy is-a hierarchies (city / month / given-name / brand). A strict structural drop-in extension of the iter-1 non-spelling absorption testbed: content-flip pairs, surface-flip pairs, and a pile-uncopyrighted diagnostic corpus with frozen surface-derived sub-context labels plus a homograph_competitor matched-negative family. Next-iteration building block."
requires-python = "==3.12.13"
dependencies = [
    "requests==2.34.2",
    "zstandard==0.25.0",
    "transformers==5.12.1",
    "tokenizers==0.22.2",
    "geonamescache==3.0.1",
    "wordfreq>=3.1.1",
    "loguru==0.7.3",
    "jsonschema==4.26.0",
    "aiohttp==3.14.1",
    "numpy==2.4.6",
]

# Reproducibility notes:
#   - Pinned pile-uncopyrighted revision: 3be90335b66f24456a5d6659d9c8d208c0357119
#   - Fixed RNG seed: 20240617
#   - Gemma tokenizer: google/gemma-2-2b (gated; HF_TOKEN required for target_token_indices; falls
#     back to unsloth/gemma-2-2b mirror, then null with token_indices_present=false)
#   - homograph_strength = wordfreq.zipf_frequency(lowercase_competitor, 'en')
#   - LLM (OpenRouter): openai/gpt-4o-mini for generation + judging (rubric extended with sense_correct)
#   - Entry point: `python3 data.py --scale full`  (the ambient `uv` workspace pyproject references a
#     non-member 'aii-server', so `uv run` is unavailable here; use a local .venv python / python3.)

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["data", "pipeline", "build_dataset"]
