[project]
name = "ccrg-m2-cross-dictionary-replication"
version = "0.1.0"
description = "M2: cross-dictionary replication of the iter-4 auditability spine (homograph recall-holes, broad K-track KG-repair + Benjamini-Hochberg FDR, KG-localized surgical sub-concept edits, recall-hole/firing-Jaccard router) on a SECOND Gemma-Scope SAE dictionary of the same frozen gemma-2-2b — PRIMARY width-65k layer-12 canonical, SECONDARY reduced layer-9 width-16k — with anchors AND absorbers re-derived per dictionary and a REPLICATES/PARTIAL/DICTIONARY-DEPENDENT verdict per spine piece."
requires-python = ">=3.12"
# torch is the cu124 build (installed as torch==2.6.0+cu124); install with:
#   uv pip install torch==2.6.0 --index-url https://download.pytorch.org/whl/cu124
# All other versions below are the EXACT versions installed in .venv (uv pip freeze).
dependencies = [
    "torch==2.6.0",
    "accelerate==1.14.0",
    "annotated-doc==0.0.4",
    "anyio==4.14.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "filelock==3.29.0",
    "fsspec==2026.4.0",
    "h11==0.16.0",
    "hf-xet==1.5.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.19.0",
    "idna==3.18",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "loguru==0.7.3",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "narwhals==2.22.1",
    "networkx==3.6.1",
    "numpy==2.4.6",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-cusparselt-cu12==0.6.2",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "packaging==26.2",
    "pandas==3.0.3",
    "patsy==1.0.2",
    "psutil==7.2.2",
    "pygments==2.20.0",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "regex==2026.5.9",
    "requests==2.32.3",
    "rich==15.0.0",
    "safetensors==0.8.0",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "setuptools==70.2.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "statsmodels==0.14.6",
    "sympy==1.13.1",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "tqdm==4.68.3",
    "transformers==5.12.1",
    "triton==3.2.0",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
]
