[project]
name = "ccrg-m7-second-absorption-case"
version = "0.5.0"
description = "Iter-5 M7: second polysemy/absorption case beyond Georgia — (1) bias_in_bios profession is-a hierarchy (NEW, GPU whole-text encode), (2) homograph scan on cached taxonomic encodings (CPU), (3) Jordan-beside-Georgia side-by-side. Reuses the iter-4 precision-gated K-track + selectors + AUC-diff machinery (engine.py). Landed outcome: honest negative 'absorption_remains_narrow' (profession is-a hierarchy = uniform-high parent recall, 0/28 absorption; Georgia stays the only eligible non-spelling case)."
requires-python = ">=3.12"
# Part 1 (professions) needs a WORKING GPU for fresh whole-text encoding (no cache exists). The
# landed device is an NVIDIA L4 (sm_89, Ada), which the standard cu124 torch wheel supports
# (torch==2.6.0 pulls the nvidia-*-cu12 12.4.x runtime libs below). Parts 2-3 reuse the iter-4
# taxonomic cache (CPU). transformers 5.x is REQUIRED for huggingface-hub 1.x compatibility
# (transformers 4.49 caps hub <1.0). Versions below are the EXACT `uv pip freeze` of the .venv
# used for the landed run, listed in full (incl. transitive deps) for exact reproducibility.
dependencies = [
    "torch==2.6.0",
    "numpy==2.4.6",
    "scipy==1.17.1",
    "scikit-learn==1.9.0",
    "statsmodels==0.14.6",
    "pandas==3.0.3",
    "patsy==1.0.2",
    "loguru==0.7.3",
    "transformers==5.12.1",
    "tokenizers==0.22.2",
    "huggingface-hub==1.19.0",
    "hf-xet==1.5.1",
    "accelerate==1.14.0",
    "safetensors==0.8.0",
    "sentencepiece==0.2.1",
    "protobuf==7.35.1",
    "networkx==3.6.1",
    "regex==2026.5.9",
    "joblib==1.5.3",
    "threadpoolctl==3.6.0",
    "sympy==1.13.1",
    "mpmath==1.3.0",
    "psutil==7.2.2",
    "filelock==3.29.4",
    "fsspec==2026.6.0",
    "pyyaml==6.0.3",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "tqdm==4.68.3",
    "packaging==26.2",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "typing-extensions==4.15.0",
    "annotated-doc==0.0.4",
    "anyio==4.14.0",
    "certifi==2026.6.17",
    "click==8.4.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.18",
    "markdown-it-py==4.2.0",
    "mdurl==0.1.2",
    "narwhals==2.22.1",
    "pygments==2.20.0",
    "rich==15.0.0",
    "setuptools==82.0.1",
    "shellingham==1.5.4",
    "typer==0.25.1",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-cusparselt-cu12==0.6.2",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "triton==3.2.0",
]
